@@ -3,6 +3,8 @@
 2006-12-29
 	* Update svn ebuild to new sourceforge url scheme.
 		- requires deletion of existing wc: rm -rf /usr/portage/distfile/svn-src/conky/
+	* Added head/tail rewrite patch (thanks Ryan Twitchell)
+	* Added diskio read/write sf.net patch 1542880 (thanks Blondak)
 
 2006-12-26
 	* Clear conky vars on disconnect/failure to open files.
